Kubernetes/jmaze-k8s-cilium/observability/grafana-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: observability
spec:
  template:
    spec:
      containers:
        - name: grafana
          volumeMounts:
            - mountPath: /grafana-dashboard-definitions/0/coredns
              name: grafana-dashboard-coredns
              readOnly: false
      volumes:
        - configMap:
            name: grafana-dashboard-coredns
          name: grafana-dashboard-coredns
