Kubernetes/jmaze-k8s-cilium/observability/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  hostnames:
    - grafana.local.julianmaze.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-gateway
      namespace: gateway
      sectionName: local-subdomain
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
